# jsonrpc/cmds.go
@@ -46,7 +46,7 @@ type IndsGetTxsCmd struct {
 	SortMode int    `json:"sort_mode"`
 }
 
-type IndsGetInscriptionsStatsCmd struct {
+type IndsGetInscriptionsCmd struct {
 	Limit    int    `json:"limit"`
 	Offset   int    `json:"offset"`
 	Chain    string `json:"chain"`
@@ -290,7 +290,7 @@ func init() {
 
 	//v2
 
-	MustRegisterCmd("inds_getInscriptionsStats", (*IndsGetInscriptionsStatsCmd)(nil), flags)
+	MustRegisterCmd("inds_getInscriptions", (*IndsGetInscriptionsCmd)(nil), flags)
 	MustRegisterCmd("inds_getTicks", (*IndsGetTicksCmd)(nil), flags)
 	MustRegisterCmd("inds_getTransactionByAddress", (*FindUserTransactionsCmd)(nil), flags)
 	MustRegisterCmd("inds_getBalanceByAddress", (*IndsGetBalanceByAddressCmd)(nil), flags)
